   * Bug #2612242 - "CPU usage > 100%"
   * Bug #2615591 - "Bug with Show one graph per cpu?"
   * Limited user account weirdness
   * No longer deletes the KProcessHacker service if it's already started
   * Memory searching now uses KProcessHacker if possible
   * Incorrect labeling of process files which can't be read (due to permissions) 
     as packed
   * Now uses the proper method of detecting .NET processes
   * System Information now runs on a separate thread
   * Disables "Show one graph per CPU" in System Information if there is only one CPU
   * Process tree weirdness for users with limited privileges
   * CPU usage is now correctly displayed in graphs - K+U are not overlayed anymore
   * "Require signatures for" names are now forced to be lower-case
   * "Hide handles with no name" is now unique to each process window - 
     changing it in one window does not affect others
   * Dialog/input boxes are now more consistent
   * Very old bug where the refresh interval isn't applied at startup
   * Displays-2-more-processes-than-actual-number bug
   * System Information screwing up when the user tries to open it when it's 
     already open
   * "a hour" -> "an hour", "yesterday ago" -> "a day ago"
   * Handle leaks in the process window, thread window, handle list and process updater
   * PH window is permanently offscreen if it is hidden when minimized
   * Process colors not being refreshed when items are removed

1.3.2.0
 * NEW:
   * Network tab - shows current network connections
   * KProcessHacker - an experimental kernel-mode driver for Process Hacker which 
     finally enables Process Hacker to display all file handles without freezing
   * Can protect and unprotect processes (Vista's DRM protection)
   * System Information menu item in the tray icon menu
   * Hide when minimized option
   * Now resolves device names into drive letters - e.g. "\Device\Harddisk1\FileName" into 
     "C:\FileName".